# copilot-more-more

./: .env.example  .gitignore  README.md  config.example.json  config.temp  init.sh  package-lock.json  package.json  provider_abstraction_plan.md  pyproject.toml  reinit_token.sh  run_me.sh
copilot_more/: account_manager.py  api_key_manager.py  api_routes.py  binance_payment.py  config.py  logger.py  proxy.py  server.py  token.py  token_manager.py
copilot_more/providers/: __init__.py  base_provider.py  github_copilot_provider.py  openai_compatible_provider.py  provider_manager.py
docs/: binance_payment_setup.md  binance_webhook_setup.md
